src/objects/SkylabxAuthentication__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store Skylabx Authentication</description>
    <fields>
        <fullName>login_external_src_url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>login external src url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>password</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>post_external_src_url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>post external src url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Skylabx Authentication</label>
</CustomObject>